tests/errors/tabular_index_length.experr
index length does not match
